scroll right on mobile and tablet fixed - reason: sticky sort switch

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
 html {
+    width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 body {
     background-color: #282828;
-    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 *,
@@ -31,7 +37,8 @@ body {
 }
 
 #year-slider {
-    margin-left: 20px
+    margin-left: 30px;
+    margin-right: 30px;
 }
 /*Playlist CSS*/
 #playlist-container {
@@ -79,17 +86,20 @@ body {
     margin-left: 15px;
 }
 
-#sticky {
+#sticky-sort-switch-box {
     background-color: #333;
-    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+#sticky {
     color: #fff;
+    max-width: 200px;
 }
 
 #sticky.stick {
     position: fixed;
     top: 0;
     z-index: 10000;
-    max-width: 62.5rem;
 }
 
 /*Controls-Box: Slider and Buttons*/
@@ -110,12 +120,12 @@ body {
 }
 
 #controls-box .ui-slider {
-    height: 0.2em !important;
+    height: 0.35em !important;
 }
 
 #controls-box .ui-slider .ui-slider-handle {
-    height: 0.65em !important;
-    width: 0.65em !important;
+    height: 0.9em !important;
+    width: 0.9em !important;
     border-radius: 25px !important;
 }
 #play-button {
@@ -155,7 +165,7 @@ body {
     background-color: #bebdbf;
     margin-top: 10px;
     margin-left: 13px;
-    width: 80%;
+    width: 75%;
 }
 
 #volume-box {
